micromobility_car_navigation/local/Project/dev_ws/log/build_2021-03-15_10-06-00/pathfinding/stderr.log
  File "/home/user/Projects/dev_ws/install/pathfinding/lib/python3.8/site-packages/pathfinding/pathfinding_service.py", line 2
    import .micromobility_map
           ^
SyntaxError: invalid syntax

